--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,13 @@ timezone: ''
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://mrgaodi.github.io
 root: /
-permalink: posts/:title/
-permalink_defaults:
+# permalink: posts/:title/
+# permalink_defaults:
+permalink: posts/:abbrlink.html
+abbrlink:
+    alg: crc32   #算法： crc16(default) and crc32
+    rep: hex     #进制： dec(default) and hex
+
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
@@ -107,5 +112,5 @@ search:
   path: search.xml
   field: post
   format: html
-  limit: 10000
+  limit: 100
   content: true
